--- a/app/src/main/res/menu/activity_main_adm_drawer.xml
+++ b/app/src/main/res/menu/activity_main_adm_drawer.xml
@@ -5,13 +5,20 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_entregas"
-            android:icon="@drawable/ic_place_24dp"
-            android:title="@string/entregas" />
-        <item
             android:id="@+id/nav_estoque"
             android:icon="@drawable/ic_shopping_cart_24dp"
             android:title="@string/estoque" />
+
+        <item
+            android:id="@+id/nav_entregas"
+            android:icon="@drawable/ic_place_24dp"
+            android:title="@string/entregas" />
+
+        <item
+            android:id="@+id/nav_coletas"
+            android:icon="@drawable/ic_near_me_24dp"
+            android:title="@string/coletas" />
+
         <item
             android:id="@+id/nav_funcionarios"
             android:icon="@drawable/ic_people_24dp"
