--- a/app/src/main/res/navigation/mobile_navigation_adm.xml
+++ b/app/src/main/res/navigation/mobile_navigation_adm.xml
@@ -6,16 +6,22 @@
     app:startDestination="@+id/nav_entregas">
 
     <fragment
+        android:id="@+id/nav_estoque"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.AdmEstoqueFragment"
+        android:label="@string/estoque"
+        tools:layout="@layout/fragment_adm_estoque" />
+
+    <fragment
         android:id="@+id/nav_entregas"
         android:name="com.gutotech.tcclogistica.view.adm.ui.entregas.AdmEntregasFragment"
         android:label="@string/entregas"
         tools:layout="@layout/fragment_adm_entregas" />
 
     <fragment
-        android:id="@+id/nav_estoque"
-        android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.AdmEstoqueFragment"
+        android:id="@+id/nav_coletas"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.coleta.AdmColetasFragment"
         android:label="@string/estoque"
-        tools:layout="@layout/fragment_adm_estoque" />
+        tools:layout="@layout/fragment_adm_coletas" />
 
     <fragment
         android:id="@+id/nav_funcionarios"
