--- a/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_roteirista_entrega_nova.xml
@@ -31,7 +31,7 @@
             <EditText
                 android:id="@+id/pedidoEditText"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_margin="5dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/background_caixa_texto"
@@ -49,7 +49,7 @@
             <EditText
                 android:id="@+id/clienteEditText"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/background_caixa_texto"
                 android:ems="10"
@@ -66,7 +66,7 @@
             <EditText
                 android:id="@+id/motoristaEditText"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/background_caixa_texto"
                 android:ems="10"
@@ -84,7 +84,7 @@
             <EditText
                 android:id="@+id/produtoEditText"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/background_caixa_texto"
                 android:ems="10"
